# camera-calibration

./: .gitignore  CMakeLists.txt  README.md
src/camera_calibration/: camera_calibration.cpp  camera_calibration.hpp  chessboard_pattern.cpp  chessboard_pattern.hpp
src/exe_calibrate_camera/: calibrate_camera_error_handler.cpp  calibrate_camera_error_handler.hpp  main_calibrate_camera.cpp  main_calibrate_camera.hpp
src/exe_find_chessboard_corners/: find_chessboard_corners_error_handler.cpp  find_chessboard_corners_error_handler.hpp  main_find_chessboard_corners.cpp  main_find_chessboard_corners.hpp
src/exe_sandbox/: main_sandbox.cpp
